test/e2e/testdata/wasm-envoyproxy-module.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: wasm-module-proxy
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  provider:
    type: Kubernetes
    kubernetes:
      envoyDeployment:
        container:
          image: envoyproxy/gateway-wasm-module-test:latest
  wasmModules:
    - name: example-filter
      source:
        type: Local
        local:
          path: /var/lib/envoy/envoy_filter_http_wasm_example.wasm
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wasm-module-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: wasm-module-proxy
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-wasm-module
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: wasm-module-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /wasm-module
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: wasm-module-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-with-wasm-module
  wasm:
    - name: wasm-filter
      rootID: my_root_id
      code:
        type: EnvoyProxyModule
        envoyProxyModule:
          name: example-filter
